# outlook-archiver

./: .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  directory_validator.rs  errors.rs  lib.rs  main.rs  pdf_generator.rs  pst_processor.rs  types.rs
src/components/: ConfigurationForm.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FileSelector.tsx  ProcessControl.tsx  ProgressDisplay.tsx  typography-h1.tsx  typography-h4.tsx  typography-p.tsx
src/lib/: errorHandling.ts  localization.ts
src/types/: index.ts
